plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

def starmadeDirectory = project.property("starmade_root")
def modName = project.property("mod_name")
group = project.property('mod_org_id')
version = project.property('mod_version')
def mainClassName = group + modName

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.spongepowered.org/maven' }
}

dependencies {
    compileOnly(files(starmadeDirectory + "StarMade.jar"))
    compileOnly(fileTree(dir: (starmadeDirectory + "lib"), include: "*.jar"))
    implementation(fileTree(dir: 'lib', include: '*.jar'))

    compileOnly 'org.spongepowered:mixin:0.8.7'
    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
        '-AmixinTargetObfuscation=notch',
        '-AmixinDefaultObfuscation=notch'
    ]
}

tasks.register("updateVersion") {
    doLast {
        def modJson = file('src/main/resources/mod.json')
        def modJsonContent = modJson.getText()
        modJsonContent = modJsonContent.replaceAll(/"version":\s*".*"/, "\"version\": \"" + version + "\"")
        modJson.write(modJsonContent)
    }
}

jar {
    dependsOn("updateVersion")
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    destinationDirectory.set(file(starmadeDirectory + "mods"))
    archiveFileName = modName + 'v' + getVersion() + '.jar'
    manifest {
        attributes(
            'Main-Class': mainClassName,
            'MixinConfigs': 'betterfactions.mixins.json'
        )
    }
    from {
        configurations.runtimeClasspath.collect {
            if(!it.getPath().contains("StarMade") && it.getName().endsWith(".jar")) {
                it.isDirectory() ? it : zipTree(it)
            } else {
                return null
            }
        }
    }
}
